--- a/Assests/style.scss
+++ b/Assests/style.scss
@@ -38,6 +38,8 @@ body {
 
   .navbar-brand img {
     margin-right: 40px;
+  height: 60px; // consistent logo height across breakpoints
+  width: auto;
   }
 
   .nav-link {
