--- a/assets/style.scss
+++ b/assets/style.scss
@@ -153,7 +153,7 @@ body {
 
 /* BANNER */
 .banner {
-  background: url('../Assests/Images/bannar-bg.png') no-repeat center center/cover;
+  background: url('../assets/Images/bannar-bg.png') no-repeat center center/cover;
   padding: 4rem 0;
 
   .banner-content h1 {
@@ -336,7 +336,7 @@ body {
     height: 100%;
     background:
       linear-gradient(to bottom, #000 0%, rgba(0, 0, 0, 0) 10%, rgba(0, 0, 0, 0) 90%, #000 100%),
-      url('../Assests/Images/feature_bg.png') center/cover no-repeat;
+      url('../assets/Images/feature_bg.png') center/cover no-repeat;
     z-index: 0;
   }
 
@@ -468,7 +468,7 @@ body {
 .ai-engine-section {
   padding: 120px 0;
   color: #fff;
-  background: url('../Assests/Images/technologyical_egde.png') no-repeat center center;
+  background: url('../assets/Images/technologyical_egde.png') no-repeat center center;
   background-size: cover;
   background-position: right;
 
@@ -632,7 +632,7 @@ body {
 
 .impact-section {
   background-color: #000;
-  background-image: url('../Assests/Images/impact-bg.png');
+  background-image: url('../assets/Images/impact-bg.png');
   background-repeat: no-repeat;
   background-position: center right;
   background-size: cover;
@@ -728,7 +728,7 @@ body {
 
 
 .hub8-section {
-  background: url('../Assests/Images/impac') center/cover no-repeat;
+  background: url('../assets/Images/impac') center/cover no-repeat;
   color: #fff;
   padding: 120px 0;
 
@@ -909,7 +909,7 @@ body {
   position: relative;
   background:
     linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-    url('../Assests/Images/Capabilities.png') center/cover no-repeat;
+    url('../assets/Images/Capabilities.png') center/cover no-repeat;
   background-blend-mode: overlay;
   color: #fff;
   padding: 120px 0;
