--- a/assets/style.css
+++ b/assets/style.css
@@ -321,6 +321,7 @@ section[id],
 /* BANNER */
 .banner {
   padding: 4rem 0;
+  margin-top: clamp(20px, 3vw, 32px);
   position: relative;
   overflow: hidden;
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0.1) 50%, rgba(0, 0, 0, 0.4) 100%), url("Images/bannar-bg.png") center/cover no-repeat;
@@ -349,6 +350,7 @@ section[id],
 @media (max-width: 576px) {
   .banner {
     padding: 2rem 0rem;
+    margin-top: 20px;
     display: flex;
     flex-direction: column;
   }
