--- a/assets/style.scss
+++ b/assets/style.scss
@@ -155,6 +155,7 @@ body {
 .banner {
   background: url('../assets/Images/bannar-bg.png') no-repeat center center/cover;
   padding: 4rem 0;
+  margin-top: clamp(20px, 3vw, 32px); // Add breathing room from fixed navbar
 
   .banner-content h1 {
     font-size: 3.75rem;
@@ -173,6 +174,7 @@ body {
 
   @media (max-width: 576px) {
     padding: 2rem 0rem;
+    margin-top: 20px; // Slightly less margin on small screens
     display: flex;
     flex-direction: column;
 
